# libcast

./: .gitignore  Makefile.am  README  configure.ac
include/: libcast.h
src/lib/: cast-internal.h  connection.c  discovery.c  error.c  json.c  logging.c  message.proto  network.c  payload.c  ssl.c  thread.c  util.c  version.c
src/tools/: castctl.c  castd.c  castdctl.proto  lscast.c
